Editor/Test/ok/files/New in ver x + users etc/QM 2.3.5/test CsScript/rejected/.NET hosting/rejected/CorBindToRuntimeEx3.cs
WINAPI2.ICLRRuntimeHost h
 out WINAPI2.CorBindToRuntime(0 @"svr" WINAPI2.CLSID_CLRRuntimeHost WINAPI2.IID_ICLRRuntimeHost &h)
out WINAPI2.CorBindToRuntimeEx(L"v2.0.50727" L"svr" WINAPI2.STARTUP_LOADER_SAFEMODE|WINAPI2.STARTUP_CONCURRENT_GC WINAPI2.CLSID_CLRRuntimeHost WINAPI2.IID_ICLRRuntimeHost &h)
out h
h.Start
h.Get




 WINAPI2.ICLRRuntimeHost h
 PF
 out WINAPI2.CorBindToRuntime(0 @"svr" WINAPI2.CLSID_CLRRuntimeHost WINAPI2.IID_ICLRRuntimeHost &h)
 PN
 out h
 out h.Start
 PN
 PO
